--- a/src/main/resources/com/nikmax/modinstaller/quest.fxml
+++ b/src/main/resources/com/nikmax/modinstaller/quest.fxml
@@ -25,9 +25,10 @@
         <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="835.0" prefWidth="907.0" styleClass="rangers-background-image">
             <children>
                 <Button fx:id="exitBtn" layoutX="626.0" layoutY="10.0" mnemonicParsing="false" onAction="#onExitBtn_Click" prefHeight="70.0" prefWidth="254.0" styleClass="big-button" stylesheets="@styles.css" text="выйти">
-               <font>
-                  <Font size="16.0" />
-               </font></Button>
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Button>
                 <Button fx:id="applyBtn" layoutX="682.0" layoutY="755.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="83.0" styleClass="apply-button" />
                 <Button fx:id="cancelBtn" layoutX="764.0" layoutY="755.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="84.0" styleClass="cancel-button" />
                 <HBox alignment="CENTER" layoutX="88.0" layoutY="171.0" spacing="1.0">
@@ -42,27 +43,47 @@
                 </HBox>
                 <VBox layoutX="97.0" layoutY="264.0" prefHeight="452.0" prefWidth="522.0" spacing="10.0" styleClass="rangers-checkbox" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="97.0" AnchorPane.rightAnchor="288.0" AnchorPane.topAnchor="264.0">
                     <children>
-                        <CheckBox mnemonicParsing="false" styleClass="rangers-checkbox" text="Universe Original">
+                        <CheckBox fx:id="universeCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Universe Original">
                             <font>
                                 <Font size="15" />
                             </font>
                         </CheckBox>
-                        <CheckBox mnemonicParsing="false" styleClass="rangers-checkbox" text="Архив исправлений для Universe">
+                        <CheckBox fx:id="universUpdatesCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Архив исправлений для Universe">
                             <font>
                                 <Font size="15.0" />
                             </font>
                         </CheckBox>
-                        <CheckBox mnemonicParsing="false" styleClass="rangers-checkbox" text="Reflection">
+                        <CheckBox fx:id="reflectionCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Reflection">
                             <font>
                                 <Font size="15.0" />
                             </font>
                         </CheckBox>
-                        <CheckBox mnemonicParsing="false" styleClass="rangers-checkbox" text="Polaria mods">
+                        <CheckBox fx:id="reflectionUpdatesCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Архив исправлений для Reflection">
                             <font>
                                 <Font size="15.0" />
                             </font>
                         </CheckBox>
-                        <CheckBox mnemonicParsing="false" styleClass="rangers-checkbox" text="garpun4">
+                        <CheckBox fx:id="polaria_modsCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Polaria mods">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="garpun4Cbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="garpun4">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="kotyankaCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Kotyanka">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="kotyankaPlusCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Kotyanka+">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="arti_modsCbx" mnemonicParsing="false" styleClass="rangers-checkbox" text="Arti mods">
                             <font>
                                 <Font size="15.0" />
                             </font>
@@ -75,7 +96,7 @@
                 <Label layoutX="82.0" layoutY="765.0" text="OK" textFill="#33e47a" />
                 <Label layoutX="88.0" layoutY="784.0" text="ERROR" textFill="#e33434" />
                 <Label layoutX="93.0" layoutY="152.0" text="Путь к папке с игрой:" textFill="yellow" />
-            <Label layoutX="92.0" layoutY="238.0" text="Список модов к установке:" textFill="yellow" />
+                <Label layoutX="92.0" layoutY="238.0" text="Список модов к установке:" textFill="yellow" />
             </children>
         </AnchorPane>
         <Label text="Label" textFill="yellow" wrapText="true" StackPane.alignment="BOTTOM_CENTER">
